# otto

./: .gitignore  README.md  dev.sh  package-lock.json  package.json  watch-sign.sh
scripts/: download-model.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: computer.rs  executor.rs  hotkey.rs  lib.rs  llm.rs  screenshot.rs  types.rs  vision.rs  window.rs
src-tauri/src/agent/: decomposer.rs  mod.rs  observer.rs  orchestrator.rs  prompts.rs  runner.rs  thinker.rs  tools.rs  verifier.rs
src/components/: CommandInput.tsx  Overlay.tsx  PlanView.tsx  ProgressView.tsx
src/hooks/: useTauriEvents.ts
src/store/: otto.ts
src/styles/: global.css
src/types/: index.ts
