[package]
name = "otto"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
image = "0.25"
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[lib]
name = "otto_lib"
crate-type = ["lib", "cdylib", "staticlib"]
